fix spacing on top
Fix the homepage spacing

--- a/src/css/HomepageCustomize.css
+++ b/src/css/HomepageCustomize.css
@@ -430,7 +430,7 @@ h3, h5{
 }
 @media only screen and (min-height: 1000px)  {
     #centralImage{
-        margin-top: 40%;
+        margin-top: 275px;
     } 
     
 
